--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,7 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
+.logo {
+  font-family: "Niconne", cursive;
+  font-size: 2rem;
 }
-body {
-}
-.myrow {
-  padding-left: 8%;
-  padding-right: 8%;
-  font-family: "Kanit", sans-serif;
-  font-family: "Open Sans", sans-serif;
+.footer {
+  background-color: #e7f6f2;
 }
