--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ body {
   border-top: 1px dotted;
 }
 hr {
-  border-top: 3px double #333;
+  border-top: 8px dotted #333;
   color: #333;
   overflow: visible;
   text-align: center;
